search bar with button added

--- a/react/index.html
+++ b/react/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>LEBRONNNNNNNNNNNN</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div class="header">
+      <h2>Search for your favorite Pokémon!</h2>
+    </div> <!-- Header -->
+    <div class = "search_bar_container">
+      <input type = "text" class = "search_bar" id = "search_bar" placeholder = "Search">
+      <button class = "search_button" id = "search_button">Search</button>
+    </div> <!-- Search  Bar -->
+    <div id="pokemon_list"></div> <!-- List of all pokemon -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
